New Text Document.txt
Write -c for compilation, clean for deleting the .o files and cleanall for .o and .exe file
And -e to execute the game
Or you can pass -a/all to all three (compile,clean,execute)
Enter the command,sire!!: -c
........compilling..........
.\src\Game.cpp: In member function 'void Game::draw()':
.\src\Game.cpp:242:32: error: 'class Ball' has no member named 'circle'
     if(ball) window.draw(ball->circle);
                                ^~~~~~
.\src\Game.cpp: In member function 'void Game::leftarrow()':
.\src\Game.cpp:273:15: error: 'class Ball' has no member named 'circle'
         ball->circle.move(-1, 0);
               ^~~~~~
.\src\Game.cpp:274:18: error: 'class Ball' has no member named 'circle'
         if(ball->circle.getPosition().x-ball->circle.getRadius()-ball->circle.getOutlineThickness()<800) ball->circle.move(+1, 0);
                  ^~~~~~
.\src\Game.cpp:274:47: error: 'class Ball' has no member named 'circle'
         if(ball->circle.getPosition().x-ball->circle.getRadius()-ball->circle.getOutlineThickness()<800) ball->circle.move(+1, 0);
                                               ^~~~~~
.\src\Game.cpp:274:72: error: 'class Ball' has no member named 'circle'
         if(ball->circle.getPosition().x-ball->circle.getRadius()-ball->circle.getOutlineThickness()<800) ball->circle.move(+1, 0);
                                                                        ^~~~~~
.\src\Game.cpp:274:112: error: 'class Ball' has no member named 'circle'
         if(ball->circle.getPosition().x-ball->circle.getRadius()-ball->circle.getOutlineThickness()<800) ball->circle.move(+1, 0);
                                                                                                                ^~~~~~
.\src\Game.cpp: In member function 'void Game::rightarrow()':
.\src\Game.cpp:287:15: error: 'class Ball' has no member named 'circle'
         ball->circle.move(1, 0);
               ^~~~~~
.\src\Game.cpp:288:18: error: 'class Ball' has no member named 'circle'
         if(ball->circle.getPosition().x+ball->circle.getRadius()+ball->circle.getOutlineThickness()>1200) ball->circle.move(-1, 0);
                  ^~~~~~
.\src\Game.cpp:288:47: error: 'class Ball' has no member named 'circle'
         if(ball->circle.getPosition().x+ball->circle.getRadius()+ball->circle.getOutlineThickness()>1200) ball->circle.move(-1, 0);
                                               ^~~~~~
.\src\Game.cpp:288:72: error: 'class Ball' has no member named 'circle'
         if(ball->circle.getPosition().x+ball->circle.getRadius()+ball->circle.getOutlineThickness()>1200) ball->circle.move(-1, 0);
                                                                        ^~~~~~
.\src\Game.cpp:288:113: error: 'class Ball' has no member named 'circle'
         if(ball->circle.getPosition().x+ball->circle.getRadius()+ball->circle.getOutlineThickness()>1200) ball->circle.move(-1, 0);
                                                                                                                 ^~~~~~
.\src\Game.cpp: In member function 'void Game::fall()':
.\src\Game.cpp:309:11: error: 'class Ball' has no member named 'circle'
     ball->circle.move(0, 10);
           ^~~~~~
.\src\Game.cpp:320:15: error: 'class Ball' has no member named 'circle'
         ball->circle.move(0, 10);
               ^~~~~~
.\src\Game.cpp:324:23: error: 'class Ball' has no member named 'circle'
         else if(ball->circle.getPosition().y>=700) burst();
                       ^~~~~~
.\src\Game.cpp: In member function 'void Game::bounce()':
.\src\Game.cpp:334:15: error: 'class Ball' has no member named 'circle'
         ball->circle.move(0, -20);
               ^~~~~~
.\src\Game.cpp:337:19: error: 'class Ball' has no member named 'circle'
             ball->circle.move(0, 40);
                   ^~~~~~
.\src\Game.cpp:342:18: error: 'class Ball' has no member named 'circle'
         if(ball->circle.getPosition().y-2*ball->circle.getRadius()-ball->circle.getOutlineThickness()<=110)
                  ^~~~~~
.\src\Game.cpp:342:49: error: 'class Ball' has no member named 'circle'
         if(ball->circle.getPosition().y-2*ball->circle.getRadius()-ball->circle.getOutlineThickness()<=110)
                                                 ^~~~~~
.\src\Game.cpp:342:74: error: 'class Ball' has no member named 'circle'
         if(ball->circle.getPosition().y-2*ball->circle.getRadius()-ball->circle.getOutlineThickness()<=110)
                                                                          ^~~~~~
.\src\Game.cpp: In member function 'void Game::getBonus()':
.\src\Game.cpp:368:15: error: 'class Ball' has no member named 'circle'
         ball->circle.setFillColor(sf::Color::Yellow);
               ^~~~~~
.\src\Game.cpp:369:15: error: 'class Ball' has no member named 'circle'
         ball->circle.setOutlineColor(sf::Color::Red);
               ^~~~~~
.\src\Game.cpp:376:15: error: 'class Ball' has no member named 'circle'
         ball->circle.setFillColor(sf::Color::White);
               ^~~~~~
.\src\Game.cpp:377:15: error: 'class Ball' has no member named 'circle'
         ball->circle.setOutlineColor(sf::Color::Blue);
               ^~~~~~
.\src\Game.cpp: In member function 'void Game::run()':
.\src\Game.cpp:465:49: error: 'class Ball' has no member named 'circle'
             if(ball) if(ball->standingOn) ball->circle.setPosition(ball->standingOn->sprite.getPosition().x+ball->standingOn->getballx(), ball->standingOn->sprite.getPosition().y);
                                                 ^~~~~~
.\src\Game.cpp:475:27: error: 'class Ball' has no member named 'circle'
                     ball->circle.setFillColor(sf::Color::Red);
                           ^~~~~~
.\src\Game.cpp:476:27: error: 'class Ball' has no member named 'circle'
                     ball->circle.setOutlineColor(sf::Color::Black);
                           ^~~~~~
.\src\Game.cpp:485:27: error: 'class Ball' has no member named 'circle'
                     ball->circle.setFillColor(sf::Color::Red);
                           ^~~~~~
.\src\Game.cpp:486:27: error: 'class Ball' has no member named 'circle'
                     ball->circle.setOutlineColor(sf::Color::Black);
                           ^~~~~~
